@@ -59,6 +59,28 @@ coog_batch_exec() { # execute batch (workers should be running) - name [args*]
         coog_batch_join "$1"
 }
 
+coog_batch_replay() { # replay failed jobs - <name>
+        [ $# -lt 1 ] && >&2 echo missing batch name && return 1
+        local broker; broker=$(_coog_batch_broker) || return $?
+        local ret; ret=1
+        for jid in $(coog_batch_query "fail" "$1")
+        do
+                echo "$1: split $jid"
+                python "$COOG_BIN/batch-replay.py" "$broker" "$jid"
+                [ $? -eq 0 ] &&
+                        coog_batch_query jarchive "$jid" > /dev/null &&
+                        ret=0 &&
+                        echo "$1: archive $jid"
+        done
+        [ $ret -ne 0 ] && echo "$1: split - nothing to do" && return 1
+        return 0
+}
+
+coog_batch_reexec() { # execute batch (workers should be running) - name
+        coog_batch_replay "$1" || return $?
+        coog_batch_join "$1"
+}
+
 coog_batch_report() { # report batch execution - name
         local broker; broker=$(_coog_batch_broker) || return $?
         local failed; failed=$(coog_batch_query "fail" "$1" | grep -Pc "\w+")
